--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
 			     		<workerType>Micro</workerType> 
 			       		<workers>1</workers>
 					</cloudHubDeployment>
-				</configuration>
+				<classifier>mule-application</classifier>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
